--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=simpleWebApp
 
-spring.datasource.urls=jdbc:h2:mem:walter
+spring.datasource.url=jdbc:h2:mem:walter
 spring.datasource.driverClassName=org.h2.Driver
