--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 spring.application.name=simpleWebApp
 
+spring.datasource.username = walter
+spring.datasource.password = walter444
+
 spring.datasource.url=jdbc:h2:mem:walter
 spring.datasource.driverClassName=org.h2.Driver
+
+spring.jpa.show-sql=true
